--- a/Themes/Default/views/container.html
+++ b/Themes/Default/views/container.html
@@ -1,6 +1,7 @@
 <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-3 col-md-2" data-ng-controller="leftCtrl">
-        <h4 data-ng-bind="menu"></h4>
+        <data-navbar-header></data-navbar-header>
+        <data-navbar-collapse></data-navbar-collapse>
     </div>
     <div class="content col-xs-12 col-sm-5 col-md-7" data-ng-controller="centerCtrl">
         <h4 data-ng-bind="menu"></h4>
