--- a/Themes/Default/views/navbar-header.html
+++ b/Themes/Default/views/navbar-header.html
@@ -1,5 +1,5 @@
 <ul class="nav menu pull-right">
-    <li><a href="webrunes-contact.htm" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+    <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
     <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
     <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
     <li><a href="#" class="btn btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
