--- a/Themes/Default/templates/root-container.html
+++ b/Themes/Default/templates/root-container.html
@@ -1,7 +1,7 @@
 <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-3 col-md-2" data-ng-controller="leftCtrl">
         <div class="navbar-header" navbar-header></div>
-        <div class="navbar-collapse in" navbar-collapse></div>
+        <div class="navbar-collapse in" navbar-menu></div>
     </div>
     <div class="content col-xs-12 col-sm-5 col-md-7" data-ng-controller="centerCtrl">
         <h4 data-ng-bind="menu"></h4>
