--- a/Themes/Default/templates/root-container.html
+++ b/Themes/Default/templates/root-container.html
@@ -6,9 +6,9 @@
         </div>
     </div>
     <div class="content col-xs-12 col-sm-5 col-md-7" data-ng-controller="centerCtrl">
-        <h5 data-ng-bind="menu"></h5>
+        <div class="margin" center-box></div>
     </div>
     <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" data-ng-controller="rightCtrl">
-        <h5 data-ng-bind="menu"></h5>
+        <div class="sidebar-margin" right-box></div>
     </div>
 </div>
