--- a/Widgets/Menu/webrunes.css
+++ b/Widgets/Menu/webrunes.css
@@ -1,4 +1,4 @@
-
+html,body{height:100%;overflow-x:hidden;color:#000 /* Prevent scroll on narrow devices */}
 html,body{font-size:12px}
 html,body,h1,h2,h3,h4,h5,h6{font-family:Arial, "Helvetica Neue", Helvetica, sans-serif}
 
